# coder

./: .gitignore  README.md  cabal.project  flake.nix  project.nix
.github/workflows/: image.yml
containers/: .gitignore  Dockerfile.ghcup  Dockerfile.nix  Dockerfile.rust  Makefile  generate_dockerfile.sh  nix.conf
dockerfiles/: Dockerfile.base  Dockerfile.ghcup  Dockerfile.nix  Dockerfile.rust  base.yml  ghcup.yml  nix.conf  nix.yml  rust.yml
server/: .gitignore  docker-compose.yml
templates/: deploy.sh
templates/docker/: .terraform.lock.hcl  main.tf
templates/ecs-ec2/: .terraform.lock.hcl  README.md  main.tf  variables.tf
templates/modules/aws-base/: README.md  main.tf  outputs.tf
templates/modules/common/: main.tf  outputs.tf  variables.tf
tool/: LICENSE  cabal.project  tool.cabal
tool/exe/: Main.hs
tool/src/Coder/: Tool.hs
tool/src/Coder/Tool/: Generate.hs
tool/src/Coder/Tool/Generate/: Docker.hs
tool/test/Coder/Tool/Generate/: DockerSpec.hs
